[package]
name = "gb"
version = "0.1.0"
authors = ["mjhd <mjhd.devlion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
num-traits = "0.2"
num-derive = "0.3"
bitmatch = "0.1.1"
gl = "0.14.0"
glfw = "0.20.0"
image = "0.19.0"
