[package]
name = "gb"
version = "0.1.0"
authors = ["mjhd <mjhd.devlion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
num-traits = "0.2"
num-derive = "0.3"
bitmatch = "0.1.1"
pixels = "0.2.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
image = "0.19.0"
bitfield = "0.13.2"
rustyline = "8.0.0"
